CSRF token añadido / verificación de solicitudes de origen confiable

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,6 @@ CLOUDINARY_API_SECRET=D5YQeZzI0s2PrxsY-XcayJ233ck
 API_PRODUCTS=http://localhost:3002
 API_SERVICES=http://18.219.37.119:3004
 API_LIQUIDATIONS=http://18.220.126.92:3003
-URL_FRONTEND = http://localhost:3000
 
 //CHAT BOT 
 //OPENAI_API_KEY=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
@@ -21,3 +20,6 @@ URL_FRONTEND = http://localhost:3000
 GROQ_API=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
 
 NODE_ENV=prod
+URL_FRONTEND=https://tcompra.com
+# Para requests a rutas protegidas de otros servidores de TCompra, incluir en header como [secretInternalName]: process.env.INTERNAL_SECRET 
+INTERNAL_SECRET=vY1g8tF5S7CZyLZPbEIxv3TZh0KfKfRM0cHdHzvGOW0 
